<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="main_text">My first app</string>
    <string name="student_info">Student: Krasnodarova\nGroup: 3.2.ISiP-2</string>
    <string name="avatar_description">Avatar author</string>
    <string name="menu_description">Menu</string>
    <string name="like_description">Like</string>
    <string name="share_description">Share</string>
    <string name="views_description">Views</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Delete</string>
    <string name="post_hint">What\'s new</string>
    <string name="save_post">Post</string>
    <string name="cancel_edit_hint">Edit</string>
    <string name="cancel_edit">Back</string>
    <string name="add_post">Add post</string>
    <string name="edit_post_title">New post</string>
    <string name="save">Save</string>
    <string name="cancel">Back</string>
    <string name="edit_post_edit_title">Edit post</string>
    <string name="error_empty_content">Text cannot be empty</string>
    <string name="play_video">Play the video</string>
    <string name="open_external">Open in an external application</string>
    <string name="error_no_video_app">No video app found</string>
    <string name="error_cannot_open_video">Unable to open video</string>
    <string name="share_post_via">Share with</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post_removed">Post removed</string>
</resources>